crates/ft-serialize/src/snapshots/ft_serialize__tests__hardened_checkpoint_json_contract.snap
---
source: crates/ft-serialize/src/lib.rs
expression: pretty
---
{
  "entries": [
    {
      "grad": null,
      "node_id": 3,
      "value": 1.0
    },
    {
      "grad": -3.5,
      "node_id": 7,
      "value": 2.0
    },
    {
      "grad": 1.25,
      "node_id": 7,
      "value": -0.5
    }
  ],
  "mode": "hardened",
  "schema_version": 1,
  "source_hash": "det64:a12999a9256c9555"
}
