crates/ft-serialize/src/snapshots/ft_serialize__tests__hardened_malformed_payload_diagnostic.snap
---
source: crates/ft-serialize/src/lib.rs
expression: err.to_string()
---
invalid json: key must be a string at line 1 column 3; payload_prefix={ not json
