crates/ft-serialize/src/snapshots/ft_serialize__tests__hardened_non_object_payload_diagnostic.snap
---
source: crates/ft-serialize/src/lib.rs
expression: err.to_string()
---
incompatible payload: top-level checkpoint payload must be a JSON object
