crates/ft-serialize/src/snapshots/ft_serialize__tests__invalid_magic_diagnostic.snap
---
source: crates/ft-serialize/src/lib.rs
expression: err.to_string()
---
invalid magic bytes: not a FrankenTorch state file
