crates/ft-serialize/src/snapshots/ft_serialize__tests__io_error_diagnostic.snap
---
source: crates/ft-serialize/src/lib.rs
expression: err.to_string()
---
I/O error at '/tmp/ft_missing.ftsv': No such file or directory (os error 2)
