crates/ft-serialize/src/snapshots/ft_serialize__tests__raptorq_sidecar_json_contract.snap
---
source: crates/ft-serialize/src/lib.rs
expression: pretty
---
{
  "constraints_symbol_count": 17,
  "object_id_high": 5067780223329653855,
  "object_id_low": 4923932207837957189,
  "repair_manifest": [
    {
      "bytes": 32,
      "degree": 4,
      "esi": 1
    },
    {
      "bytes": 32,
      "degree": 4,
      "esi": 2
    },
    {
      "bytes": 32,
      "degree": 12,
      "esi": 3
    },
    {
      "bytes": 32,
      "degree": 5,
      "esi": 4
    },
    {
      "bytes": 32,
      "degree": 4,
      "esi": 5
    },
    {
      "bytes": 32,
      "degree": 5,
      "esi": 6
    },
    {
      "bytes": 32,
      "degree": 6,
      "esi": 7
    },
    {
      "bytes": 32,
      "degree": 4,
      "esi": 8
    },
    {
      "bytes": 32,
      "degree": 4,
      "esi": 9
    },
    {
      "bytes": 32,
      "degree": 5,
      "esi": 10
    },
    {
      "bytes": 32,
      "degree": 5,
      "esi": 11
    },
    {
      "bytes": 32,
      "degree": 16,
      "esi": 12
    },
    {
      "bytes": 32,
      "degree": 6,
      "esi": 13
    },
    {
      "bytes": 32,
      "degree": 4,
      "esi": 14
    },
    {
      "bytes": 32,
      "degree": 7,
      "esi": 15
    },
    {
      "bytes": 32,
      "degree": 4,
      "esi": 16
    },
    {
      "bytes": 32,
      "degree": 4,
      "esi": 17
    }
  ],
  "repair_symbol_count": 17,
  "schema_version": 1,
  "seed": 5067780287586391121,
  "source_hash": "det64:9b8068c7763b8a1f",
  "source_symbol_count": 1,
  "symbol_size": 32
}
