crates/ft-serialize/src/snapshots/ft_serialize__tests__tensor_error_wrapper_diagnostic.snap
---
source: crates/ft-serialize/src/lib.rs
expression: err.to_string()
---
tensor error: dense tensor requires contiguous layout
