crates/ft-serialize/src/snapshots/ft_serialize__tests__truncated_shape_dims_diagnostic.snap
---
source: crates/ft-serialize/src/lib.rs
expression: err.to_string()
---
corrupt state file: truncated shape data for tensor 'abcde'
