crates/ft-serialize/src/snapshots/ft_serialize__tests__unsupported_version_diagnostic.snap
---
source: crates/ft-serialize/src/lib.rs
expression: err.to_string()
---
unsupported format version 99 (max supported: 1)
