crates/ft-serialize/src/snapshots/ft_serialize__tests__version_mismatch_diagnostic.snap
---
source: crates/ft-serialize/src/lib.rs
expression: err.to_string()
---
schema version mismatch: expected=1 found=2
